--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header (featureSelected)="onNavigate($event)"></app-header>
 
 <!-- -------------- Check NGX - Bootstrap is running --------------
 <div class="container mt-5">
@@ -41,8 +41,8 @@
   <div class="row">
     <div class="col-md-12">
 
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
+      <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
 
     </div>
   </div>
