--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,17 +6,6 @@
 <hr>
 <div class="row">
   <div class="col-12">
-    <div class="list-group">
-      <a href="#" class="list-group-item list-group-item-action clearfix" *ngFor="let recipe of recipes">
-        <div class="float-left">
-            <h4>{{recipe.name}}</h4>
-            <p>{{recipe.description}}</p>
-        </div>
-        <span class="float-right">
-            <img [src]="recipe.imagePath" alt="" class="img-fluid" style="max-height: 75px;">
-        </span>
-      </a>
-    </div>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item *ngFor="let item of recipes" [recipe]="item"></app-recipe-item>
   </div>
 </div>
