--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="col-12">
-    <img src="" alt="" class="img-fluid">
+    <img [src]="recipe.imagePath" alt="" class="img-fluid">
   </div>
 </div>
 <div class="row">
   <div class="col-12">
-    Recipe Name
+    <h1>{{recipe.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -25,7 +25,7 @@
 </div>
 <div class="row">
   <div class="col-12">
-    Description
+    {{recipe.description}}
   </div>
 </div>
 <div class="row">
