--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,11 +1,9 @@
-<div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action clearfix">
-    <div class="float-left">
-      <h4>{{recipe.name}}</h4>
-      <p>{{recipe.description}}</p>
-    </div>
-    <span class="float-right">
-      <img [src]="recipe.imagePath" alt="" class="img-fluid" style="max-height: 75px;">
-    </span>
-  </a>
-</div>
+<a class="list-group-item list-group-item-action clearfix" (click)="onSelected()" style="cursor: pointer;">
+  <div class="float-left">
+    <h4>{{recipe.name}}</h4>
+    <p>{{recipe.description}}</p>
+  </div>
+  <span class="float-right">
+    <img [src]="recipe.imagePath" alt="" class="img-fluid" style="max-height: 75px;">
+  </span>
+</a>
