--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,6 +6,8 @@
 <hr>
 <div class="row">
   <div class="col-12">
-    <app-recipe-item *ngFor="let item of recipes" [recipe]="item"></app-recipe-item>
+    <div class="list-group">
+      <app-recipe-item *ngFor="let item of recipes" [recipe]="item" (recipeSelected)="onRecipeSelected(item)"></app-recipe-item>
+    </div>
   </div>
 </div>
