--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-12">
-    <img [src]="recipe.imagePath" alt="" class="img-fluid">
+    <img [src]="recipe.imagePath" alt="" class="img-fluid" style="max-height: 300px">
   </div>
 </div>
 <div class="row">
