--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -5,12 +5,12 @@
 
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name">
+          <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" #nameInput>
         </div>
 
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" class="form-control" id="amount" aria-describedby="emailHelp" placeholder="0">
+          <input type="number" class="form-control" id="amount" aria-describedby="emailHelp" placeholder="0" #amountInput>
         </div>
 
         <div class="w-100"></div>
@@ -18,7 +18,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <button class="btn btn-success mr-2" type="submit">
+              <button class="btn btn-success mr-2" type="submit" (click)="onAddItem()">
                 Add
               </button>
               <button class="btn btn-warning mr-2" type="button">
