--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-12">
     <div class="list-group">
-      <app-recipe-item *ngFor="let item of recipes" [recipe]="item" (recipeSelected)="onRecipeSelected(item)"></app-recipe-item>
+      <app-recipe-item *ngFor="let item of recipes" [recipe]="item"></app-recipe-item>
     </div>
   </div>
 </div>
