--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
       </button>
       <div class="dropdown-menu" *dropdownMenu aria-labelledby="btnGroupDrop1">
         <a class="dropdown-item" (click)="onAddToTheShoppingList()" style="cursor: pointer;">To Shopping List</a>
-        <a class="dropdown-item" style="cursor: pointer;">Edit Recipe</a>
+        <a class="dropdown-item" style="cursor: pointer;" [routerLink]="['edit']">Edit Recipe</a>
         <a class="dropdown-item" style="cursor: pointer;">Delete Recipe</a>
       </div>
     </div>
