--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<a class="list-group-item list-group-item-action clearfix" (click)="onSelected()" style="cursor: pointer;">
+<a class="list-group-item list-group-item-action clearfix" style="cursor: pointer;" [routerLink]="[index]" routerLinkActive="active">
   <div class="float-left">
     <h4>{{recipe.name}}</h4>
     <p>{{recipe.description}}</p>
