--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-12">
-    <button class="btn btn-primary">New Recipe</button>
+    <button class="btn btn-primary" routerLink="new">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-12">
     <div class="list-group">
-      <app-recipe-item *ngFor="let item of recipes" [recipe]="item"></app-recipe-item>
+      <app-recipe-item *ngFor="let item of recipes; let i = index" [recipe]="item" [index]="i"></app-recipe-item>
     </div>
   </div>
 </div>
