--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-12">
-    <form>
+    <form (ngSubmit)="onAddItem(f)" #f="ngForm">
       <div class="row">
 
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" #nameInput>
+          <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" name="name" ngModel required>
         </div>
 
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" class="form-control" id="amount" aria-describedby="emailHelp" placeholder="0" #amountInput>
+          <input type="number" class="form-control" id="amount" aria-describedby="emailHelp" placeholder="0" name="amount" ngModel required>
         </div>
 
         <div class="w-100"></div>
@@ -18,13 +18,13 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <button class="btn btn-success mr-2" type="submit" (click)="onAddItem()">
-                Add
+              <button class="btn btn-success mr-2" type="submit" [disabled]="!f.valid">
+                {{editedMode?'Update':'Add'}}
               </button>
-              <button class="btn btn-warning mr-2" type="button">
+              <button class="btn btn-warning mr-2" type="button" (click)="onDelete()" *ngIf="editedMode">
                 Delete
               </button>
-              <button class="btn btn-info" type="button">
+              <button class="btn btn-info" type="button" (click)="onClear()">
                 Clear
               </button>
             </div>
