--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,12 @@
     <app-shopping-edit></app-shopping-edit>
     <hr>
     <ul class="list-group">
-      <a class="list-group-item list-group-item-action" style="cursor: pointer" *ngFor="let item of ingredient">
+      <a
+        class="list-group-item list-group-item-action"
+        style="cursor: pointer"
+        *ngFor="let item of ingredient; let id = index"
+        (click)="onEditItem(id)"
+      >
         {{item.name}} ({{item.amount}})
       </a>
     </ul>
