--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -4,8 +4,8 @@
 
       <div class="row mb-4">
         <div class="col-12">
-          <button class="btn btn-primary mr-2" type="submit">Save</button>
-          <button class="btn btn-danger" type="button">Cancel</button>
+          <button class="btn btn-primary mr-2" type="submit" [disabled]="!recipeForm.valid">Save</button>
+          <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
         </div>
       </div>
 
@@ -22,14 +22,14 @@
         <div class="col-12">
           <div class="form-group">
             <label for="imagePath">Image Path</label>
-            <input type="text" id="imagePath" class="form-control" [formControlName]="'imagePath'">
+            <input type="text" id="imagePath" class="form-control" [formControlName]="'imagePath'" #imagePath>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-12">
-          <img src="" alt="" class="img-fluid">
+          <img [src]="imagePath.value" alt="" class="img-fluid">
         </div>
       </div>
 
@@ -44,7 +44,7 @@
 
       <div class="row">
         <div class="col-12" [formArrayName]="'ingredients'">
-          <div class="row" *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index" [formGroupName]="i">
+          <div class="row my-2" *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index" [formGroupName]="i">
             <div class="col-8">
               <input type="text" class="form-control" [formControlName]="'name'">
             </div>
@@ -52,9 +52,13 @@
               <input type="number" class="form-control" [formControlName]="'amount'">
             </div>
             <div class="col-2">
-              <button type="text" class="btn btn-danger">X</button>
-            </div>
+              <button type="button" class="btn btn-danger" (click)="onDeleteIngredient(i)">X</button>
+            </div>            
           </div>
+          <hr>
+            <div class="col-2">
+              <button type="button" class="btn btn-danger" (click)="onAddIngredient()">Add Ingredient</button>
+            </div>
         </div>
       </div>
 
