--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,13 +19,13 @@
 
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+        <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false" (click)="isDropdownCollapsed = !isDropdownCollapsed">
           Manage
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown" [collapse]="!isDropdownCollapsed">
-          <a class="dropdown-item" href="#">Save Data</a>
-          <a class="dropdown-item" href="#">Fetch Data</a>
+          <a class="dropdown-item" style="cursor: pointer;" (click)="onSave()">Save Data</a>
+          <a class="dropdown-item" style="cursor: pointer;" (click)="onGet()">Fetch Data</a>
         </div>
       </li>
     </ul>
