--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,21 @@
     </ul>
 
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
+
+      <ng-template [ngIf]="!authService.isAuthenticated()">
+
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" style="cursor:pointer" routerLink="/signup">Signup</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" style="cursor:pointer" routerLink="/signin">Signin</a>
+        </li>
+
+      </ng-template>
+
+      <li class="nav-item"><a class="nav-link" style="cursor:pointer" *ngIf="authService.isAuthenticated()" (click)="onLogout()">Logout</a></li>
+
+      <li class="nav-item dropdown" *ngIf="authService.isAuthenticated()">
         <a class="nav-link dropdown-toggle" style="cursor: pointer;" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false" (click)="isDropdownCollapsed = !isDropdownCollapsed">
           Manage
@@ -28,6 +42,7 @@
           <a class="dropdown-item" style="cursor: pointer;" (click)="onGet()">Fetch Data</a>
         </div>
       </li>
+      
     </ul>
 
   </div>
